@@ -24,13 +24,19 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 import org.apache.commons.io.FileUtils;
 import org.junit.Rule;
 import org.junit.Test;
+import org.junit.contrib.java.lang.system.RestoreSystemProperties;
 import org.junit.experimental.categories.Category;
 import org.junit.rules.TemporaryFolder;
 
+import org.apache.geode.internal.GemFireVersion;
 import org.apache.geode.internal.util.IOUtils;
 import org.apache.geode.test.junit.categories.IntegrationTest;
 
@@ -39,6 +45,9 @@ public class StartMemberUtilsTest {
 
   @Rule
   public TemporaryFolder temporaryFolder = new TemporaryFolder();
+
+  @Rule
+  public RestoreSystemProperties restorer = new RestoreSystemProperties();
 
   @Test
   public void workingDirDefaultsToMemberName() {
@@ -79,6 +88,47 @@ public class StartMemberUtilsTest {
 
     final int actualPid = StartMemberUtils.readPid(pidFile);
     assertEquals(expectedPid, actualPid);
+  }
+
+  @Test
+  public void testGeodeOnClasspathIsFirst() {
+    String currentClasspath = System.getProperty("java.class.path");
+    String customGeodeCore = "/custom/geode-core-" + GemFireVersion.getGemFireVersion() + ".jar";
+    System.setProperty("java.class.path", currentClasspath + ":" + customGeodeCore);
+
+    String[] otherJars = new String[] {"/other/one.jar", "/other/two.jar"};
+
+    String gemfireClasspath = StartMemberUtils.toClasspath(true, otherJars);
+    assertThat(gemfireClasspath).startsWith(customGeodeCore);
+
+    gemfireClasspath = StartMemberUtils.toClasspath(false, otherJars);
+    assertThat(gemfireClasspath).startsWith(customGeodeCore);
+  }
+
+  @Test
+  public void testAddMaxHeap() {
+    List<String> baseCommandLine = new ArrayList<>();
+
+    // Empty Max Heap Option
+    StartMemberUtils.addMaxHeap(baseCommandLine, null);
+    assertThat(baseCommandLine.size()).isEqualTo(0);
+
+    StartMemberUtils.addMaxHeap(baseCommandLine, "");
+    assertThat(baseCommandLine.size()).isEqualTo(0);
+
+    // Only Max Heap Option Set
+    StartMemberUtils.addMaxHeap(baseCommandLine, "32g");
+    assertThat(baseCommandLine.size()).isEqualTo(3);
+    assertThat(baseCommandLine).containsExactly("-Xmx32g", "-XX:+UseConcMarkSweepGC",
+        "-XX:CMSInitiatingOccupancyFraction=" + StartMemberUtils.CMS_INITIAL_OCCUPANCY_FRACTION);
+
+    // All Options Set
+    List<String> customCommandLine = new ArrayList<>(
+        Arrays.asList("-XX:+UseConcMarkSweepGC", "-XX:CMSInitiatingOccupancyFraction=30"));
+    StartMemberUtils.addMaxHeap(customCommandLine, "16g");
+    assertThat(customCommandLine.size()).isEqualTo(3);
+    assertThat(customCommandLine).containsExactly("-XX:+UseConcMarkSweepGC",
+        "-XX:CMSInitiatingOccupancyFraction=30", "-Xmx16g");
   }
 
   private void writePid(final File pidFile, final int pid) throws IOException {
